--- a/Lessons1/Homework1_1.html
+++ b/Lessons1/Homework1_1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    function sumTo(n) {
+    function sumTo(n) { //Сумма чисел через цикл
         var sum = 0;
         for (var i = 1; i <= n; i++) {
             sum += i;
