--- a/Lessons1/Homework1_2.html
+++ b/Lessons1/Homework1_2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    function sumTo(n) {
+    function sumTo(n) {  //Сумма чисел через рекурсию
         if (n != 1) {
             return n + sumTo(n - 1);
         } else {
