--- a/Lessons1/Homework1_3.html
+++ b/Lessons1/Homework1_3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    function factorial(n) {
+    function factorial(n) {  //факториал через рекурсию
         if (n != 1) {
             return n * factorial(n - 1);
         } else {
