--- a/Lessons2/Homework_3.html
+++ b/Lessons2/Homework_3.html
@@ -7,17 +7,25 @@
 <body>
 <script>
     arr = [1, 2, 3, 4, 5];
+
     function getSumArray(arr) {
-        for (let i = 0; i < arr.length; i++) {
-            var sum = 0;
-            while (arr[i] != 0) {
-                sum += arr[i];
-                arr[i]--;
-            }
-            arr[i] = sum;
+        for (let i = 1; i < arr.length; i++) {
+            arr[i] += arr[i-1];
         }
         return arr;
     }
+
+    // function getSumArray(arr) {
+    //     for (let i = 0; i < arr.length; i++) {
+    //         var sum = 0;
+    //         while (arr[i] != 0) {
+    //             sum += arr[i];
+    //             arr[i]--;
+    //         }
+    //         arr[i] = sum;
+    //     }
+    //     return arr;
+    // }
 
     alert(getSumArray(arr));
 </script>
